# wcmux

./: .gitignore  README.md  pyproject.toml
docs/: plan-20260423.md  spec-20260423.md  spec-20260424.md  spec-20260425.md  spec-20260427.md  spec-20260429.md  spec.md  testing-20260423.md  testing-20260424.md  testing-20260425.md  testing-20260427.md  testing-20260429.md  testing.md
src/wcmux/: app.py  auth.py  cli.py  config.py  cwd.py  devices.py  passhash.py  preview.py  sessions.py  share_routes.py  shares.py  terminal.py  terminal_unix.py
src/wcmux/static/: app.js  style.css
src/wcmux/static/preview/: index.html  preview.html  shares.html  style.css
src/wcmux/templates/: login.html  terminal.html
tests/: README.md  runserver.sh  test_m10_stale_session.py  test_m11_device_token.py  test_m12_preview.py  test_m13_share.py  test_m1_auth.py  test_m2_single_tab.py  test_m3_multitab.py  test_m4_cwd.py  test_m4_shorten.py  test_m5_baseurl.py  test_m6_exit_autoclose.py  test_m7_password_hash.py  test_m8_workspace.py  test_m9_osc_live.py  test_m9_osc_unit.py
